--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -12,10 +12,12 @@
     "@tanstack/react-query": "^5.63.0",
     "@typescript-eslint/parser": "^8.19.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.17.0",
     "next": "15.1.4",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
