--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.63.0",
     "@typescript-eslint/parser": "^8.19.1",
     "clsx": "^2.1.1",
@@ -17,7 +18,9 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "swiper": "^11.2.1",
+    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
