--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.63.0",
     "@typescript-eslint/parser": "^8.19.1",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
