--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.15.1",
     "swiper": "^11.2.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.3"
