--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@repo/tailwind-config": "*",
     "@tanstack/react-query": "^5.63.0",
     "@typescript-eslint/parser": "^8.19.1",
     "axios": "^1.7.9",
@@ -17,18 +18,19 @@
     "framer-motion": "^11.17.0",
     "next": "15.1.4",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.1",
     "swiper": "^11.2.1",
     "yup": "^1.6.1",
-    "zustand": "^5.0.3",
-    "@repo/tailwind-config": "*"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
