fix: 애플 로그인 재시도 및 로깅 추가

--- a/apps/soso-web/package.json
+++ b/apps/soso-web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.25.4",
     "@hookform/resolvers": "^3.10.0",
     "@repo/tailwind-config": "*",
     "@tanstack/react-query": "^5.63.0",
